--- a/doxygen.conf
+++ b/doxygen.conf
@@ -665,10 +665,7 @@ WARN_LOGFILE           = docs/doxygen.log
 # directories like "/usr/src/myproject". Separate the files or directories
 # with spaces.
 
-INPUT                  = src/CEM_ApiClient.class.php \
-                         src/CEM_ApiPage.class.php \
-                         src/CEM_ApiTransactionItem.class.php \
-                         src/CEM_HttpClient.class.php
+INPUT                  = src/
 
 # This tag can be used to specify the character encoding of the source files
 # that doxygen parses. Internally doxygen uses the UTF-8 encoding, which is
